# lpttrigger

./: AUTHORS  ChangeLog  Doxyfile  LPTtrigger.sln  LPTtrigger.vcproj  Makefile  Makefile.am  NEWS  README  README.md  WinIod.lib  configure.ac  lptsynchro.c  lptsynchro.cpp  lptsynchro.h  lpttrigger.c  lpttrigger.h  lptwriter-linux.c  lptwriter-win32.cpp  lptwriter.h  testport.c  testport.vcproj
debian/: changelog  control  liblpttrigger0-dev.install  liblpttrigger0.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex
doc/: CloseLPTTrigger.3  Makefile.am  OpenLPTPort.3  OpenLPTTrigger.3  SetLPTData.3  SignalTrigger.3  doxygen.cfg.in  lptpwm_close.3  lptpwm_open.3  lptpwm_setlevels.3  lpttrigger_get_string.3  testport.1
lib/: Makefile.am  clock_gettime.c  clock_gettime.h  timespec.h
src/: Makefile.am  WinIo.h  exports.sym  lptpwm.c  lptpwm.h  lpttrigger.c  lpttrigger.h  lptwriter-linux.c  lptwriter-win32.cpp  lptwriter.h  testport.c  winio_dll.h
tests/: Makefile.am  testpwm.c
third/: Makefile.am  WinIo.def
